--- a/networking.yaml
+++ b/networking.yaml
@@ -6,11 +6,31 @@ metadata:
 spec:
   podSelector:
     matchLabels:
+      app: mi-app  # Aplica esta política a los pods etiquetados como micro-b
+  policyTypes:
+    - Egress
+  egress:
+    - to:
+        - podSelector:
+            matchLabels:
+              app: mi-app2  # Permite solo el tráfico proveniente de micro-a
+      ports:
+        - protocol: TCP
+          port: 8080  # Puerto de destino en micro-b (ajústalo según tu app)
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-micro-a-to-micro-b
+  namespace: ecuaalejo2013-dev
+spec:
+  podSelector:
+    matchLabels:
       app: mi-app2  # Aplica esta política a los pods etiquetados como micro-b
   policyTypes:
     - Ingress
   ingress:
-    - to:
+    - from:
         - podSelector:
             matchLabels:
               app: mi-app  # Permite solo el tráfico proveniente de micro-a
