--- a/public.yaml
+++ b/public.yaml
@@ -13,7 +13,7 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              network.openshift.io/policy-group: mi-app  # Permite solo el tráfico proveniente de micro-a
+              network.openshift.io/policy-group: ingress
       ports:
         - protocol: TCP
           port: 8080  # Puerto de destino en micro-b (ajústalo según tu app)
